--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </div>
     <!-- Copyright -->
     <div class="copyright">
-        <p>Create By <a href="">Foolish Developer</a> | All Right Reserved.</p>
+        <p>Create By <a href="">Shri Hari Bala</a> | All Right Reserved.</p>
     </div>
  
  
