--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
  
     <section class="home" id="home">
         <div class="social">
-    
+            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="#"><i class='bx bxl-dribbble' ></i></a>
+            <a href="#"><i class='bx bxl-behance' ></i></a>
         </div>
         <div class="home-img">
             <img src="11.png" alt="">
