icon links added

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
  
     <section class="home" id="home">
         <div class="social">
-            <a href="#"><i class='bx bxl-github'></i></a>
-            <a href="#"><i class='bx bxl-dribbble' ></i></a>
-            <a href="#"><i class='bx bxl-behance' ></i></a>
+            <a href="https://github.com/dashboard"><i class='bx bxl-github'></i></a>
+            <a href="https://www.instagram.com/shriharibala15/"><i class='bx bxl-instagram' ></i></a>
         </div>
         <div class="home-img">
             <img src="11.png" alt="">
