--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <span>Hello, I'm</span>
             <h1>Shri Hari Bala</h1>
             <h2>Web Developer & Java Developer</h2>
-            <p>I'm Shri Hari Bala, I have successfully completed  B.Sc Computer Science from  AYYA NADAR JANAKI AMMAL COLLEGE, Sivakasi <br> Quick learner with demonstrated proficiency in Core Java, Python, HTML & CSS, PHP and MySQL<br> </p>
+            <p> I have successfully completed  B.Sc Computer Science from  AYYA NADAR JANAKI AMMAL COLLEGE, Sivakasi <br> Quick learner with demonstrated proficiency in Core Java, Python, HTML & CSS, PHP and MySQL<br> </p>
             <a href="#contact" class="btn">Contact Me</a>
         </div>
  
