--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
             <h1>Shri Hari Bala</h1>
             <h2>Web Developer & Java Developer</h2>
             <p> I have successfully completed  B.Sc Computer Science from  AYYA NADAR JANAKI AMMAL COLLEGE, Sivakasi <br> Quick learner with demonstrated proficiency in Core Java, Python, HTML & CSS, PHP and MySQL<br> </p>
-            <a href="#contact" class="btn">Contact Me</a>
+            <a href="SHRI HARI BALA N Resume.pdf" class="btn">Resume</a>
         </div>
  
     </section>
